# DesktopDigitizer6

./: .gitignore  DDCalibAmp_8hh_source.html  DDCalibBase_8hh_source.html  DDCalibEnergy_8hh_source.html  DDCalibPE_8hh_source.html  DDCalib_8hh_source.html  DDSignal_8hh_source.html  DDTreeMaker_8hh_source.html  README.md  annotated.html  classDDCalib-members.html  classDDCalib.html  classDDCalibAmp-members.html  classDDCalibAmp.html  classDDCalibBase-members.html  classDDCalibBase.html  classDDCalibEnergy-members.html  classDDCalibEnergy.html  classDDCalibPE-members.html  classDDCalibPE.html  classDDSignal-members.html  classDDSignal.html  classDDTreeMaker-members.html  classDDTreeMaker.html  classes.html  digitLinkDef_8h_source.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_08d237fc27d4ecd563f71c5d52f2fecc.html  dir_211c4f6b4cfc462a84b60ddadb82658d.html  dir_2fda0b9fa6ce424d0c23dec804f65244.html  dir_370a05bc919a3b485116f307abacd69c.html  dir_42789a1db0069d592656e7fa63f3c39c.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_9e1ad8558307c54e582f0ff219c0f82d.html  dir_c5054363ebfa96cf56e7960f552982f0.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d4e142aef2342bb7c2fde416d4d6905a.html  dir_da0f06c86f1c908881a669eb19c3ce89.html  dir_f1cad5dbcd19c789b40708d91ae09201.html  functions.html  (+13 more)
documentation/: Measurements_sheet.ods
results/: .directory
results/2018_01_19_17_17/: config.txt
results/2018_01_20_13_07/: config.txt
results/2018_01_22_11_02/: config.txt
results/2018_01_22_11_51/: config.txt
results/2018_01_22_15_37/: config.txt
results/2018_01_22_17_54/: config.txt
results/2018_01_23_10_46/: config.txt
results/2018_01_23_17_59/: config.txt
results/2018_01_23_9_54/: config.txt
results/2018_01_26_8_27/: .results.root  config.txt
search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  enums_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
sources/: CMakeLists.txt  Doxyfile.in  calib.cc  digit.cc  digitLinkDef.h
sources/include/: DDCalib.hh  DDCalibAmp.hh  DDCalibBase.hh  DDCalibEnergy.hh  DDCalibPE.hh  DDSignal.hh  DDSignalBase.hh  DDSignalEnergy.hh  DDSignalPE.hh  DDTreeMaker.hh
sources/macros/: Attenuation.C  Calibration.C  Correlation.C  Coupling.C  Deconvolution.C  Noise.C  Oscnoise.C  ReadingBinary.C  SignalFitter.C  SignalsViewer.C  TimeRes.C  TreeAnalyzer.C  Wrapping.C  rootlogon.C
sources/src/: DDCalib.cc  DDCalibAmp.cc  DDCalibEnergy.cc  DDCalibPE.cc  DDSignal.cc  DDSignalBase.cc  DDSignalEnergy.cc  DDSignalPE.cc  DDTreeMaker.cc
